--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "CI=false && react-scripts build",
+    "build-local": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
