--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^4.0.3",
+    "react-switch-selector": "^2.0.0",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.10"
   },
@@ -41,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "envify": "^4.1.0",
+    "terser": "^5.7.1",
+    "uglifyify": "^5.0.2"
   }
 }
