--- a/package.json
+++ b/package.json
@@ -1,51 +1,58 @@
 {
-  "name": "amafrespprestador",
-  "homepage": "./",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.12.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "chokidar": "^3.5.2",
-    "history": "^5.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.0-beta.0",
-    "react-scripts": "^4.0.3",
-    "react-switch-selector": "^2.0.0",
-    "web-vitals": "^1.0.1",
-    "yarn": "^1.22.10"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "CI=false && react-scripts build",
-    "build-local": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "envify": "^4.1.0",
-    "terser": "^5.7.1",
-    "uglifyify": "^5.0.2"
-  }
+    "name": "amafrespprestador",
+    "homepage": "./",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@babel/core": "^7.15.0",
+        "@material-ui/core": "^4.12.1",
+        "@seges/angular-ng-intervalpicker": "^2.0.0",
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
+        "chokidar": "^3.5.2",
+        "csstype": "^2.6.2",
+        "goober": "^2.0.39",
+        "history": "^5.0.0",
+        "ng2-date-picker": "^12.0.3",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^6.0.0-beta.0",
+        "react-scripts": "^4.0.3",
+        "react-switch-selector": "^2.0.0",
+        "rxjs": "^6.6.7",
+        "typescript": "^2.9.2",
+        "web-vitals": "^1.0.1",
+        "yarn": "^1.22.10"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "CI=false && react-scripts build",
+        "build-local": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "envify": "^4.1.0",
+        "terser": "^5.7.1",
+        "uglifyify": "^5.0.2"
+    }
 }
