--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "history": "^5.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-input-mask": "^2.0.4",
         "react-router-dom": "^6.0.0-beta.0",
         "react-scripts": "^4.0.3",
         "react-switch-selector": "^2.0.0",
