--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
         "@testing-library/user-event": "^12.1.10",
         "chokidar": "^3.5.2",
         "classnames": "^2.3.1",
+        "crypto-js": "^4.1.1",
         "csstype": "^2.6.2",
         "goober": "^2.0.39",
         "history": "^5.0.0",
+        "md5": "^2.3.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-input-mask": "^2.0.4",
