--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "crypto-js": "^4.1.1",
         "csstype": "^2.6.2",
         "goober": "^2.0.39",
+        "google-map-react": "^2.1.10",
         "history": "^5.0.0",
         "md5": "^2.3.0",
         "react": "^17.0.2",
