--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
         "goober": "^2.0.39",
         "google-map-react": "^2.1.10",
         "history": "^5.0.0",
+        "leaflet": "^1.7.1",
         "md5": "^2.3.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-input-mask": "^2.0.4",
+        "react-leaflet": "^3.2.1",
         "react-router-dom": "^6.0.0-beta.0",
         "react-scripts": "^4.0.3",
         "react-switch-selector": "^2.0.0",
