--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
         "google-map-react": "^2.1.10",
         "history": "^5.0.0",
         "leaflet": "^1.7.1",
+        "mapbox-gl": "^2.5.1",
         "md5": "^2.3.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-input-mask": "^2.0.4",
         "react-leaflet": "^3.2.1",
+        "react-map-gl": "^6.1.17",
         "react-router-dom": "^6.0.0-beta.0",
         "react-scripts": "^4.0.3",
         "react-switch-selector": "^2.0.0",
@@ -55,7 +57,9 @@
         ]
     },
     "devDependencies": {
+        "css-loader": "^6.5.0",
         "envify": "^4.1.0",
+        "style-loader": "^3.3.1",
         "terser": "^5.7.1",
         "uglifyify": "^5.0.2"
     }
