--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "history": "^5.0.0",
         "leaflet": "^1.7.1",
         "mapbox-gl": "^2.5.1",
+        "maplibre-gl": "^2.0.0-pre.1",
         "md5": "^2.3.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -45,16 +46,7 @@
         ]
     },
     "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
+        "browserslist": "> 0.25%, not dead"
     },
     "devDependencies": {
         "css-loader": "^6.5.0",
