--- a/package.json
+++ b/package.json
@@ -46,7 +46,20 @@
         ]
     },
     "browserslist": {
-        "browserslist": "> 0.25%, not dead"
+        "browserslist": {
+            "production": [
+                ">0.2%",
+                "not dead",
+                "not op_mini all",
+                "not chrome < 51",
+                "not safari < 10"
+            ],
+            "development": [
+                "last 1 chrome version",
+                "last 1 firefox version",
+                "last 1 safari version"
+            ]
+        }
     },
     "devDependencies": {
         "css-loader": "^6.5.0",
