--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "md5": "^2.3.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-iframe-click": "^2.0.2",
         "react-input-mask": "^2.0.4",
         "react-leaflet": "^3.2.2",
         "react-map-gl": "^6.1.17",
